fix(build): exec:exec plugin configuration for native launcher